--- a/src/components/imageGallery/imageGallery.module.css
+++ b/src/components/imageGallery/imageGallery.module.css
@@ -1,4 +1,7 @@
-.ImageGallery {
+  /*
+ * Стили компонента ImageGallery
+ */
+ .ImageGallery {
   display: grid;
   max-width: calc(100vw - 48px);
   grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
