--- a/src/index.css
+++ b/src/index.css
@@ -1,40 +1,25 @@
 @import-normalize; /* bring in normalize.css styles */
 
+body {  font-family: sans-serif;  line-height: 1.5;}
+h1,h2,h3,h4,h5,h6,p {  margin: 0;}
+ul,ol {  margin: 0;  padding: 0;}
+li {list-style-type: none;}
+img {  display: block;  max-width: 100%;  height: auto;}
+
+
+body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
 
-html {
-  box-sizing: border-box;
-  width: 100vw;
-  overflow-x: hidden;
-}
 
-*,
-*::before,
-*::after {
-  box-sizing: inherit;
-}
 
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-    Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
-  color: #212121;
-  background-color: #fff;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-img {
-  display: block;
-  max-width: 100%;
-  height: auto;
-}
-
-.OvalWrapper {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
